Fix width of filters when overflowed

--- a/frontend/src/filters/CategoryFilter.scss
+++ b/frontend/src/filters/CategoryFilter.scss
@@ -1,5 +1,5 @@
 .categoryFilter{
-    flex-basis: 30%;
+    width: 30%;
     transform: scale(0.9);
 
     label{
@@ -7,4 +7,6 @@
         font-size: 13px;
         line-height: 24px;
     }
+
+    
 }
