--- a/frontend/src/filters/SubcategoryFilter.scss
+++ b/frontend/src/filters/SubcategoryFilter.scss
@@ -1,5 +1,5 @@
 .subcategoryFilter{
-    flex-basis: 30%;
+    width: 30%;
     transform: scale(0.9);
 
     label{
